--- a/src/components/BottomPlayer.css
+++ b/src/components/BottomPlayer.css
@@ -1,10 +1,10 @@
 .bottomPlayerDiv{
-    padding-right: 26px;
-    padding-left: 26px;
+    padding-right: 19.5px;  /*Absolute Value*/
+    padding-left: 19.5px; /*Absolute Value*/
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100vw;
     background-color: #080808;
-    height: 128px;
+    height: 96px; /*Absolute Value*/
 }
