--- a/src/components/SideMenu.css
+++ b/src/components/SideMenu.css
@@ -1,18 +1,18 @@
 .sidemenu{
-    width: 100px; /*absolute value*/
+    width: 75px; /*absolute value*/
     background-color: #0B0B0B;
     height: 100%;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
-    gap:15px;
+    padding-top: 37.5px; /*absolute value*/
+    gap:11.25px; /*absolute value*/
 }
 
 .tablogo{
-    width: 71px; /*absolute value*/
-    height: 71px; /*absolute value*/
+    width: 53.25px; /*absolute value*/
+    height: 53.25px; /*absolute value*/
     background-color: #000000;
     border-radius: 10px;
     display: flex;
@@ -22,4 +22,8 @@
 
 .tabDvmLogo{
     border: 2px solid white;
+}
+
+.bosmlogo{
+    scale: 0.75;
 }
