--- a/src/components/PlaylistHead.css
+++ b/src/components/PlaylistHead.css
@@ -13,12 +13,23 @@
     display: flex;
     align-items: center;
     padding-left: 41.25px;
+    padding-right: 41.25px;
     gap: 25px;
+}
+
+.dvmImg{
+    max-height: 225px;
+    height: 68%;
+}
+
+.DVMLogo{
+    height: 100%;
 }
 
 .headTitle{
     font-family: "DM Sans";
-    height: 225px;
+    max-height: 225px;
+    height: 68%;
 }
 
 .subHeading{
@@ -28,7 +39,7 @@
 }
 
 .title{
-    font-size: 65px;
+    font-size: 60px;
     color: white;
     font-weight: 900;
 }
@@ -37,4 +48,51 @@
     font-family: 'MyCustomFont';
     font-size: 21px;
     width: 500px;
+}
+
+@media (max-height : 800px ) and (max-width : 1250px){
+    .subHeading{
+        font-size: 22px;
+        color: #B3B3B3;
+        font-weight: 600;
+    }
+    
+    .title{
+        font-size: 50px;
+        color: white;
+        font-weight: 900;
+    }
+    
+    .blurb{
+        font-family: 'MyCustomFont';
+        font-size: 18px;
+        width: 100%;
+    }
+
+    
+    .playlistHead{
+        
+        padding-left: 25px;
+        padding-right: 25px;
+        gap: 20px;
+    }
+}
+
+@media (max-height : 700px ){
+    .subHeading{
+        font-size: 18px;
+        color: #B3B3B3;
+        font-weight: 600;
+    }
+    
+    .title{
+        font-size: 40px;
+        color: white;
+        font-weight: 900;
+    }
+    
+    .blurb{
+        font-family: 'MyCustomFont';
+        font-size: 15px;
+    }
 }
