--- a/src/components/MainBody.css
+++ b/src/components/MainBody.css
@@ -9,4 +9,5 @@
     padding-left: 13.5px; /*absolute padding value*/
     padding-right: 13.5px; /*absolute padding value*/
     margin-bottom: 2px;
+    max-height: calc(100vh - 98px - 97.5px);
 }
