--- a/src/components/Playlist.css
+++ b/src/components/Playlist.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    min-height: fit-content;
 }
 
 .playlistIcons{
@@ -80,23 +81,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: calc(100% - 126.75px );
     padding-bottom: 10px;
 }
 
 .playlistdata{
    
-    overflow-y: scroll;
+
     flex:1;
     width: 100%;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
+    
     /* height: 40%; */
 }
 
-.playlistdata::-webkit-scrollbar{
-    display: none;
-}
+
 
 .seniordata{
     width: 100%;
@@ -111,7 +108,11 @@
     margin-top: 15px;
     padding-top: 5px;
     padding-bottom: 5px;
+    transition: background-color 0.25s;
+}
 
+.seniordata:hover{
+    background-color: #3d1e7c;
 }
 
 .seniorImgDiv{
@@ -128,6 +129,7 @@
     font-family: 'MyCustomFont';
     font-size: 22.5px;
     justify-self: start;
+    cursor: pointer;
 }
 
 .seniorVerticalPlaylist{
