--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,21 @@
     flex-direction: column;
     height: 100vh;
 }
+.pageMobile{
+    display: none;
+
+}
+
+@media (max-width : 1000px){
+    .page{
+        display: none;
+    }
+
+    .pageMobile{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100svh;
+        width: 100vw;
+    }
+}
