--- a/src/components/MobilePage.css
+++ b/src/components/MobilePage.css
@@ -130,7 +130,9 @@ button:active .navbtnsvg .navbtns{
     max-width: 412.5px;
     flex: 1;
     overflow: scroll;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background-color: #1B1005;
