--- a/src/components/MobilePage.css
+++ b/src/components/MobilePage.css
@@ -135,7 +135,7 @@ button:active .navbtnsvg .navbtns{
     justify-content: center;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    background-color: #1B1005;
+    background-color: #582CB1;
     font-family: 'MyCustomFont';
     font-size: 17px;
     scrollbar-width: none;
@@ -144,4 +144,9 @@ button:active .navbtnsvg .navbtns{
 
 .mobileBlurbn::-webkit-scrollbar{
     display: none;
+}
+
+.time{
+    font-family: "DM Sans";
+    font-weight: 400;
 }
