--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+   
 }
 
 .controls{
@@ -11,6 +12,7 @@
     justify-content: center;
     align-items: center;
     gap: 37.5px;
+    margin-top: 10px;
 }
 
 button{
@@ -23,6 +25,13 @@ button{
     justify-content: center;
     align-items: center;
     gap: 21.6px;
+    margin-bottom: 10px;
+}
+
+.timebar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .time{
