--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -30,7 +30,9 @@ button{
 }
 
 .timebar{
-    display: flex;
+    display:grid;
+    grid-template-columns: 1;
+    grid-template-rows: 1;
     align-items: center;
     justify-content: center;
 }
@@ -39,8 +41,66 @@ button{
     font-size: 12px; /*absolute value*/
     font-family: "DM Sans";
     font-weight: 700;
+    width: 30px;
 }
 
 button:hover .navbtnsvg .navbtns{
     fill: white;
 }
+
+.seekbar{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    appearance: none;
+    height: 3px;
+    width:474px;
+    background: #535353;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+    position: relative;
+} 
+
+.before {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    height: 4px;
+    width:474px;
+    background: #C4C4C4;
+    transform: scaleX(0);
+    transform-origin: left;
+    /* transition: transform 0.1s linear; */
+    border-radius: 5px;
+    z-index: 2;
+    pointer-events: none;
+}
+
+.seekbar::-webkit-slider-thumb {
+    appearance: none;
+    
+}
+.seekbar:hover::-webkit-slider-thumb { 
+    width: 10px;
+    height: 10px; 
+    background: #C4C4C4; 
+    border-radius: 50%; 
+    
+}
+.seekbar::-moz-range-thumb {
+    appearance: none; 
+}
+.seekbar:hover::-moz-range-thumb { 
+    width: 10px;
+    height: 10px; 
+    background: #C4C4C4; 
+    border-radius: 50%; 
+}
+.seekbar::-ms-thumb {
+    appearance: none; 
+} 
+.seekbar:hover::-ms-thumb { 
+    width: 10px;
+    height: 10px; 
+    background: #C4C4C4; 
+    border-radius: 50%;  
+} 
