--- a/src/components/MobilePage.css
+++ b/src/components/MobilePage.css
@@ -105,7 +105,7 @@
     width: 100%;
 }
 
-.seekbar{
+.mblSeekbar{
     grid-row: 1/2;
     grid-column: 1/2;
     appearance: none;
@@ -119,7 +119,7 @@
     position: relative;
 } 
 
-.before {
+.mblBefore {
     grid-row: 1/2;
     grid-column: 1/2;
     height: 4px;
@@ -134,7 +134,7 @@
     pointer-events: none;
 }
 
-.seekbar::-webkit-slider-thumb {
+.mblSeekbar::-webkit-slider-thumb {
     appearance: none;
     width: 10px;
     height: 10px; 
@@ -142,28 +142,28 @@
     border-radius: 50%; 
     
 }
-.seekbar:hover::-webkit-slider-thumb { 
+.mblSeekbar:hover::-webkit-slider-thumb { 
     
     
 }
-.seekbar::-moz-range-thumb {
+.mblSeekbar::-moz-range-thumb {
     appearance: none; 
     width: 10px;
     height: 10px; 
     background: #C4C4C4; 
     border-radius: 50%; 
 }
-.seekbar:hover::-moz-range-thumb { 
+.mblSeekbar:hover::-moz-range-thumb { 
     
 }
-.seekbar::-ms-thumb {
+.mblSeekbar::-ms-thumb {
     appearance: none; 
     width: 10px;
     height: 10px; 
     background: #C4C4C4; 
     border-radius: 50%; 
 } 
-.seekbar:hover::-ms-thumb { 
+.mblSeekbar:hover::-ms-thumb { 
     
 } 
 
