--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
-  /* color: rgba(255, 255, 255, 0.87);
-  background-color: #151515;
+  color: rgba(255, 255, 255, 0.87);
+  /* background-color: #151515;
   background-image: url(/grid.png);
   background-repeat: no-repeat;
   background-size: cover;
