--- a/src/components/PlaylistHead.css
+++ b/src/components/PlaylistHead.css
@@ -28,10 +28,10 @@
 
 .headTitle{
     font-family: "DM Sans";
-    max-height: 225px;
+    /* max-height: 225px;
     height: 68%;
+} */
 }
-
 .subHeading{
     font-size: 25px;
     color: #B3B3B3;
@@ -39,7 +39,7 @@
 }
 
 .title{
-    font-size: 55px;
+    font-size: 60px;
     color: white;
     font-weight: 900;
 }
@@ -47,7 +47,7 @@
 .blurb{
     font-family: 'MyCustomFont';
     font-size: 20px;
-    width: 500px;
+    width: 800px;
 }
 
 @media (max-height : 800px ) and (max-width : 1250px){
