--- a/src/components/PlaylistHead.css
+++ b/src/components/PlaylistHead.css
@@ -6,7 +6,9 @@
 }
 
 .playlistHead{
-    background-image: linear-gradient(#47346B, #371974);
+    background-image: linear-gradient(rgba(71, 52, 107, 0.5), rgba(55, 25, 116, 0.5));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     height: 45%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
