--- a/src/components/PlaylistSection.css
+++ b/src/components/PlaylistSection.css
@@ -2,7 +2,7 @@
     flex: 1;
     height: 100%;
     max-height: calc(100vh - 98px - 97.5px);
-
+    background-color: #4D3F68;
     border-radius: 10px;
     position: relative;
     overflow: scroll;
@@ -15,10 +15,10 @@
 }
 
 .blur{
-    width: 100%;
+    width: calc( 100% - 520px );
     position: absolute;
     top: 100%;
-    left: 0%;
+    left: 90px;
     transform: translate(0%,-50%);
     pointer-events: none;
 }
