minor bug fixed

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -15,7 +15,7 @@
 .carouselTitle {
   width: 90%; /*absolute value*/
   display: flex;
-  gap: 133.45px; /*absolute value*/
+  justify-content: space-between; /*absolute value*/
 }
 
 .carouselTitleText {
